<?php

declare(strict_types=1);

namespace App\Entity;

use App\Entity\Enum\ParticipantRole;
use App\Entity\Trait\IdentifiableEntity;
use App\Repository\ParticipantRepository;
use Doctrine\ORM\Mapping\Column;
use Doctrine\ORM\Mapping\Entity;
use Doctrine\ORM\Mapping\JoinColumn;
use Doctrine\ORM\Mapping\ManyToOne;
use Doctrine\ORM\Mapping\UniqueConstraint;
use Symfony\Component\Uid\Uuid;

#[Entity(repositoryClass: ParticipantRepository::class)]
#[UniqueConstraint(name: "participant", columns: ["event_id", "user_id"])]
class Participant implements EntityInterface
{
    use IdentifiableEntity;

    #[ManyToOne(targetEntity: User::class, fetch: 'EAGER')]
    #[JoinColumn(referencedColumnName: 'id', nullable: false, onDelete: 'CASCADE')]
    private User $user;

    #[ManyToOne(targetEntity: Event::class, fetch: 'EAGER', inversedBy: 'participants')]
    #[JoinColumn(referencedColumnName: 'id', nullable: false, onDelete: 'CASCADE')]
    private Event $event;

    #[Column(length: 20)]
    private ParticipantRole $role;

    public function __construct()
    {
        $this->uuid = Uuid::v6();
    }

    public function getUser(): User
    {
        return $this->user;
    }

    public function setUser(User $user): self
    {
        $this->user = $user;
        return $this;
    }

    public function getEvent(): Event
    {
        return $this->event;
    }

    public function setEvent(Event $event): self
    {
        $this->event = $event;
        return $this;
    }

    public function getRole(): ParticipantRole
    {
        return $this->role;
    }

    public function setRole(ParticipantRole $role): self
    {
        $this->role = $role;
        return $this;
    }
}
