@startuml

entity Event {
    id: int <<generated>>
    uuid: uuid <<generated>>
    name: string
    startDatetime: datetime
    endDatetime: datetime
    location: <<Location>>
}

entity Location {
    id: int <<generated>>
    uuid: uuid <<generated>>
}

entity Participant {
    id: int <<generated>>
    uuid: uuid <<generated>>
    userId: <<User>>
    eventId: <<Event>>
    role: <<ParticipantRole>>
}

entity User {
    id: int <<generated>>
    uuid: uuid <<generated>>
    email: string
}

Event ||..|| Location
Participant }|..|| Event
User ||..|{ Participant
@enduml
